[gd_scene load_steps=6 format=2]

[ext_resource path="res://nodes/Platers/PlaterBase/PlaterBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://nodes/Platers/Bumper/Bumper.gd" type="Script" id=2]
[ext_resource path="res://assets/Models/Platers/Bumper/Bumper.dae" type="PackedScene" id=3]

[sub_resource type="CylinderShape" id=1]

radius = 1.1
height = 0.268547

[sub_resource type="CylinderShape" id=2]

radius = 1.24258
height = 0.565068

[node name="Bumper" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="BodyDetector" type="Area" parent="." index="0"]
editor/display_folded = true

[node name="CollisionShape" type="CollisionShape" parent="BodyDetector" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0571725, 0 )
shape = SubResource( 1 )

[node name="Model" parent="." index="1" instance=ExtResource( 3 )]
editor/display_folded = true

[node name="Spatial" type="Spatial" parent="." index="2"]
editor/display_folded = true

[node name="origin" type="Position3D" parent="Spatial" index="0"]

[node name="xAxis" type="Position3D" parent="Spatial" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0 )

[node name="yAxis" type="Position3D" parent="Spatial" index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="zAxis" type="Position3D" parent="Spatial" index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )

[node name="StaticBody" type="StaticBody" parent="." index="3"]
editor/display_folded = true

[node name="CollisionShape" type="CollisionShape" parent="StaticBody" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.309029, 0 )
shape = SubResource( 2 )

[connection signal="body_entered" from="BodyDetector" to="." method="_on_BodyDetector_body_entered"]

[editable path="Model"]
